--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,20 @@
+:root {
+  --primary: #8ecae6;
+  --secondary: #219ebc;
+  --tertiary: #023047;
+  --quaternary: #ffb703;
+  --quinary: #fb8500;
+}
+
+.bg-custom-primary{
+  background-color: var(--primary);
+  color: var(--tertiary);
+}
+
+.text-custom{
+  color: var(--tertiary);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
